# term-2

./: CMakeLists.txt  sonar-project.properties
akinator/: CMakeLists.txt  functions.c  functions.h  main.c
analogOfAkinator/: CMakeLists.txt  functions.c  functions.h  main.c
bmp/: CMakeLists.txt  functions.h
lab1/: functions.c  functions.h  main.c  task1.sln  task1.vcxproj  task1.vcxproj.filters
lab1/x64/Debug/: functions.obj.enc  main.obj.enc  task1.exe.recipe  task1.vcxproj.FileListAbsolute.txt
lab1/x64/Debug/task1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  task1.lastbuildstate
lab2/: functions.c  functions.h  main.c
lab2compr/: CMakeLists.txt  functions.c  functions.h  main.c
lab2decompr/: CMakeLists.txt  functions.c  functions.h  main.c
lab3/: CMakeLists.txt  functions.c  functions.h  main.c
lab5/: CMakeLists.txt  functions.c  functions.h  main.c
lab5hash/: functions.c  functions.h
untitled/: functions.c  functions.h
