cmake_minimum_required(VERSION 3.23)
project(lab5 C)

set(CMAKE_C_STANDARD 99)

add_executable(lab5 main.c functions.c functions.h)
add_executable(akinator main.c functions.c functions.h)
add_executable(lab3 main.c functions.c functions.h)
add_executable(lab2 main.c functions.c functions.h)
add_executable(lab2decompr main.c functions.c functions.h)
add_executable(lab1 main.c functions.c functions.h)